--- a/resilio-sync/Dockerfile.template
+++ b/resilio-sync/Dockerfile.template
@@ -1,19 +1,10 @@
-FROM resin/%%RESIN_MACHINE_NAME%%-raspbian:latest
+FROM resin/%%RESIN_MACHINE_NAME%%-ubuntu:latest
 
 # hack to force cache rebuild
 ENV version 1.0
 
 # pull the appropriate version of the image
-RUN case %%RESIN_ARCH%% in \
-      rpi) \
-        RESILIO_ARCH="arm" \
-        ;; \
-      armv7hf) \
-        RESILIO_ARCH="armhf" \
-        ;; \
-    esac \
-    && printf $RESILIO_ARCH \
-    && wget https://download-cdn.resilio.com/stable/linux-$RESILIO_ARCH/resilio-sync_$RESILIO_ARCH.tar.gz -O /tmp/resilio.tgz
+ADD https://download-cdn.resilio.com/stable/linux-armhf/resilio-sync_armhf.tar.gz /tmp/resilio.tgz
 RUN tar -xf /tmp/resilio.tgz -C /usr/bin rslsync && rm -f /tmp/resilio.tgz
 
 # copy extra files needed to run Resilio
