--- a/resilio-sync/Dockerfile.template
+++ b/resilio-sync/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM resin/%%RESIN_MACHINE_NAME%%-ubuntu:latest
+FROM resin/%%RESIN_MACHINE_NAME%%-alpine:latest
 
 # hack to force cache rebuild
 ENV version 1.0
