do not launch resilio, to save SD cards life

--- a/resilio-sync/Dockerfile.template
+++ b/resilio-sync/Dockerfile.template
@@ -14,4 +14,5 @@ RUN tar -xf /tmp/resilio.tgz -C /usr/bin rslsync && rm -f /tmp/resilio.tgz
 COPY sync.conf.default /etc/
 COPY run_sync /usr/bin/
 
-CMD ["run_sync", "--config", "/mnt/sync/sync.conf"]
+CMD ["tail", "-f", "/dev/null"]
+# CMD ["run_sync", "--config", "/mnt/sync/sync.conf"]
