increase the number of inotify watchers

--- a/resilio-sync/Dockerfile.template
+++ b/resilio-sync/Dockerfile.template
@@ -1,5 +1,8 @@
 FROM resin/%%RESIN_MACHINE_NAME%%-ubuntu:latest
 
+# update the number of inotify watchers (used listen to file changes)
+RUN echo fs.inotify.max_user_watches=524288 | tee -a /etc/sysctl.conf
+
 # mount the external drive (note: it needs to be formatted and named correctly)
 ENV INITSYSTEM on
 RUN apt-get update && apt-get install -y exfat-fuse
