--- a/resilio-sync/Dockerfile.template
+++ b/resilio-sync/Dockerfile.template
@@ -1,5 +1,9 @@
 FROM resin/%%RESIN_MACHINE_NAME%%-ubuntu:latest
 
+# an ugly hack to force the image to rebuild to get new software versions, see:
+# https://forums.resin.io/t/how-do-i-force-resin-to-rebuild-my-dockerfile/2202
+ENV version_string igksofvgny
+
 # update the number of inotify watchers (used listen to file changes)
 RUN echo fs.inotify.max_user_watches=524288 | tee -a /etc/sysctl.conf
 
